fix(theme/default): keep inline rich text baseline aligned

--- a/htdocs/modules/system/themes/default/css/reset.css
+++ b/htdocs/modules/system/themes/default/css/reset.css
@@ -20,6 +20,9 @@ table, caption, tbody, tfoot, thead, tr, th, td {
     font-style:         inherit;
     font-size:             100%;
     font-family:         inherit;
+    }
+
+table, caption, tbody, tfoot, thead, tr, th, td {
     vertical-align:     top;
     }
 /* remember to define focus styles! */
